[RTL] Fix text overlapping with radio buttons on radio button questions (#10623)
### Description

Manual testing revealed that in RTL mode, the text was overlayed by
radio buttons on radio button questions and got cut off. Adding extra
margin to the right to prevent that.

#6142 

### Checklist

#### General

Read the full guidelines for PRs
[here](https://github.com/civiform/civiform/wiki/Technical-contribution-guide#creating-a-pull-request)

- [x] Added the correct label (see
[docs](https://github.com/civiform/civiform/wiki/Technical-contribution-guide#adding-appropriate-labels)
for more info): < feature | enhancement | bug | under-development |
dependencies | infrastructure | ignore-for-release | database >
- [ ] Assigned to a specific person, `civiform/developers`, or a [more
specific round-robin
list](https://github.com/civiform/civiform/wiki/Technical-contribution-guide#adding-reviewers)
- [ ] Added an additional reviewer from outside your organization as FYI
(if the primary reviewer is in the same organization as you)
- [x] Removed the release notes section if the title is sufficient for
the release notes description, or put more details in that section.
- [x] Created unit and/or browser tests which fail without the change
(if possible)
- [x] Performed manual testing (Chrome and Firefox if it includes
front-end changes)
- [ ] Extended the README / documentation, if necessary. For user-facing
features, consider updating [the user
docs](https://github.com/civiform/docs). For "under-the-hood" changes or
things more relevant to developers, consider updating [the dev
wiki](https://github.com/civiform/civiform/wiki).
- [ ] Ensured PII wasn't added to any new logs, unless it was guarded by
`isDevOrStaging`
- [ ] Noted in the PR description which, if any, code in this PR was

#### User visible changes

- [ ] Followed steps to
[internationalize](https://github.com/civiform/civiform/wiki/Internationalization-%28i18n%29#application-strings)
any new strings
- [ ] Added c

--- a/server/app/assets/stylesheets/northstar/_uswds-theme-custom-styles.scss
+++ b/server/app/assets/stylesheets/northstar/_uswds-theme-custom-styles.scss
@@ -624,7 +624,8 @@ main {
     right: 1rem;
   }
 
-  .usa-radio__label > div {
+  .usa-radio__label > div,
+  .usa-radio__label > p {
     margin-inline-start: 2.5rem;
   }
 
